// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDownField rendering renders expected elements 1`] = `
<div
  className="DropDownField"
>
  <LabelLine
    error={false}
    id="random-id-label"
    text="Test"
  />
  <Select
    aria-describedby="random-id-helper"
    aria-invalid={false}
    aria-labelledby="random-id-label"
    className="DropDownField__select"
    error={false}
    getOptionKey={[MockFunction]}
    id="random-id"
    onChange={[MockFunction]}
    options={
      [
        "o0",
        "o1",
      ]
    }
    renderOption={[Function]}
    value="o0"
  />
  <FieldHelper
    id="random-id-helper"
    text="Helper text"
  />
</div>
`;

exports[`DropDownField rendering renders expected elements when optional properties are set 1`] = `
<div
  className="DropDownField TestClass"
>
  <LabelLine
    error={true}
    id="random-id-label"
    required={true}
    text="Test"
  />
  <Select
    aria-describedby="random-id-error"
    aria-invalid={true}
    aria-labelledby="random-id-label"
    aria-required={true}
    className="DropDownField__select"
    disabled={true}
    error={true}
    getOptionKey={[MockFunction]}
    id="random-id"
    onChange={[MockFunction]}
    options={
      [
        "o0",
        "o1",
      ]
    }
    renderOption={[Function]}
    value="o0"
  />
  <FieldError
    id="random-id-error"
    text="Error"
  />
</div>
`;
